# CoSH

./: CMakeLists.txt  Interpreter.cpp  Interpreter.h  Parser.cpp  Parser.h  main.cpp
Basics/: Alias.h  Func.h  Funcs.cpp  Funcs.h  History.cpp  History.h  Programm.h  Variable.h  Variables.cpp  Variables.h
Builtin/: Builtin.cpp  Builtin.h
Builtin/Builtin_Alias/: Builtin_Alias.cpp  Builtin_Alias.h
Builtin/Cat/: Cat.cpp  Cat.h
Builtin/Clear/: Clear.cpp  Clear.h
Builtin/Echo/: Echo.cpp  Echo.h
Builtin/Exit/: Exit.cpp  Exit.h
Builtin/Function/: Function.cpp  Function.h
Builtin/Ls/: LS.cpp  LS.h
Builtin/PWD/: PWD.cpp  PWD.h
Builtin/Set/: Set.cpp  Set.h
Builtin/Start/: Start.cpp  Start.h
Builtin/Vars/: Vars.cpp  Vars.h
Builtin/Yes/: Yes.cpp  Yes.h
Includes/: BuiltinFuncsList.h  Colors.h  Includes.h  Retvals.h
